--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <script src="https://fenimore92.github.io/vue-basic/dist/build.js"></script>
   </body>
 </html>
